# firefly-compositor

./: Cargo.toml  linker.ld
src/: cursor.rs  decoration.rs  main.rs
src/input/: manager.rs  mod.rs
src/render/: blitter.rs  compositor.rs  mod.rs
src/scene/: damage.rs  layer.rs  mod.rs  window.rs
src/scenegraph/: compositor.rs  mod.rs  surface.rs
src/server/: dispatch.rs  handlers.rs  mod.rs  protocol.rs  server.rs  state.rs
src/ui/: cursor.rs  decoration.rs  mod.rs
