[package]
name = "firefly"
version = "0.0.1"
edition = "2021"
description = "Firefly Compositor - RedstoneOS Desktop Environment"

[[bin]]
name = "firefly"
path = "src/main.rs"
test = false
bench = false

[dependencies]
redpowder = { path = "../../redpowder" }
gfx_types = { path = "../../libs/gfx_types" }

[profile.release]
panic = "abort"
opt-level = 2
lto = false
codegen-units = 1
debug = 2
strip = "none"
debug-assertions = true
overflow-checks = true
incremental = false
